Display 'NewSong' if song name null, fixed slightly offcenter spinner, don't show tempo/timesig if null transport

--- a/Root.webfolder/styles.less
+++ b/Root.webfolder/styles.less
@@ -252,8 +252,8 @@ footer
 .lds-dual-ring 
 {
 	display: none;
-	width: 64px;
-	height: 64px;
+	width: 60px;
+	height: 57px;
 }
 .lds-dual-ring:after 
 {
@@ -263,8 +263,8 @@ footer
 	height: 46px;
 	margin: 1px;
 	border-radius: 50%;
-	border: 5px solid #fff;
-	border-color: #fff transparent #fff transparent;
+	border: 5px solid orange;
+	border-color: orange transparent orange transparent;
 	animation: lds-dual-ring 1.2s linear infinite;
 }
 @keyframes lds-dual-ring 
@@ -298,8 +298,8 @@ footer
 	}
 	.lds-dual-ring 
 	{
-		width: 35px;
-		height: 35px;
+		width: 34px;
+		height: 32px;
 	}
 	.lds-dual-ring:after 
 	{
